[package]
name = "rust-api-json-redis"
version = "0.1.0"
authors = ["Willy Romão <willyr.goncalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.23"
redis = { version = "0.17.0", features = ["tokio-comp"] }
