[package]
name = "rust-api-json-redis"
version = "0.1.0"
authors = ["Willy Romão <willyr.goncalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.23"
redis = { version = "0.19.0", features = ["tokio-comp"] }
mobc-redis = "0.7.0"
mobc = "0.7.0"


